--- a/style.css
+++ b/style.css
@@ -850,10 +850,13 @@ section {
 }
 
  .navigation .nav-itens a {
-    color: #111;
+    color: var(--main-color);
     font-size: 1.2em;
     margin: 15px 50px;
     transition: 0.3s ease;
+ }
+ .navigation .nav-itens a:hover {
+    color: var(--text-color);
  }
  .navigation .nav-itens a i {
     display: inline-block;
